# interview_2025

./: README.md
task_1/: Dockerfile  M6.csv  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
task_1/src/api/: __init__.py  app.py  csv_router_2.py  csv_routes.py
task_1/src/utils/: __init__.py  utils.py
